--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <h1>🐹 Hamster Quiz</h1>
             <div id="coin-counter">💰 <span id="coin-count">0</span></div>
         </header>
-
+       
         <main>
             <div id="profile-section">
                 <input type="text" id="username" placeholder="Enter your name">
-                <input type="file" id="avatar-upload" accept="image/*">
+                <input type="image" id="avatar-upload" accept="image/*">
                 <button id="save-profile">Save Profile</button>
             </div>
 
